--- a/contactenos.html
+++ b/contactenos.html
@@ -85,7 +85,7 @@ Vestibulum elementum lorem eu eros. Etiam ornare leo sit amet ante. Nam at nibh 
     m&aacute;s de 25 </p>
   <p>Principal sector en el que participa:
     <select name="principal_sector" id="principal_sector">
-      <option selected="selected">Seleccione una Opción</option>
+      <option>Seleccione una Opcion</option>
       <option>-------------------------</option>
       <option value="1">Vivienda Popular</option>
       <option value="2">Departamentos</option>
@@ -141,7 +141,7 @@ Vestibulum elementum lorem eu eros. Etiam ornare leo sit amet ante. Nam at nibh 
   </tr>
   <tr>
     <td class="pie">&copy;DIGITEVER 2011. Última modificación: 
-      <!-- #BeginDate format:fcSw1m -->Lunes, 21 Octubre, 2013  17:26<!-- #EndDate --></td>
+      <!-- #BeginDate format:fcSw1m -->Martes, 22 Octubre, 2013  10:32<!-- #EndDate --></td>
   </tr>
 </table>
 <map name="menu" id="menu">
